--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sequelize-cli": "^6.2.0"
   },
   "dependencies": {
+    "chance": "^1.1.7",
     "faker": "^5.1.0",
     "pg": "^8.4.2",
     "pg-hstore": "^2.3.3",
